[gd_scene load_steps=48 format=3 uid="uid://7b8ecsljuur7"]

[ext_resource type="Script" uid="uid://bbqkm07fo1hkp" path="res://scripts/world.gd" id="1_k40i2"]
[ext_resource type="Script" uid="uid://bciar80p3kqcc" path="res://scripts/player.gd" id="2_le6xu"]
[ext_resource type="ArrayMesh" uid="uid://bqcilnxekln6g" path="res://assets/kitchenassets/table_round_A.obj" id="3_q76tg"]
[ext_resource type="ArrayMesh" uid="uid://d3hkf5s5qkh65" path="res://assets/kitchenassets/stove_single.obj" id="4_sxw1y"]
[ext_resource type="ArrayMesh" uid="uid://chytia7sek7ru" path="res://assets/kitchenassets/kitchencounter_straight_B.obj" id="6_2a2la"]
[ext_resource type="ArrayMesh" uid="uid://bt5fqusd0i7s8" path="res://assets/kitchenassets/pan_A.obj" id="7_2a2la"]
[ext_resource type="ArrayMesh" uid="uid://ccdu8si88el7q" path="res://assets/kitchenassets/kitchencounter_innercorner.obj" id="7_deaom"]
[ext_resource type="ArrayMesh" uid="uid://dodfdfkndbmla" path="res://assets/kitchenassets/cuttingboard.obj" id="8_6mti1"]
[ext_resource type="ArrayMesh" uid="uid://dku845kqwnd76" path="res://assets/kitchenassets/bowl.obj" id="9_gi6id"]
[ext_resource type="ArrayMesh" uid="uid://dnw6ln86toimb" path="res://assets/kitchenassets/knife.obj" id="10_bpfb4"]
[ext_resource type="Texture2D" uid="uid://dtxutdwarivkd" path="res://assets/Cursor.png" id="11_b1m2q"]
[ext_resource type="ArrayMesh" uid="uid://rs6dw7qecvnp" path="res://assets/kitchenassets/crate_buns.obj" id="12_8bx52"]
[ext_resource type="ArrayMesh" uid="uid://blmeb0is1ac16" path="res://assets/kitchenassets/plate.obj" id="14_q76tg"]
[ext_resource type="Script" uid="uid://ciavdwk3guaof" path="res://scripts/objective_plate.gd" id="14_sxw1y"]
[ext_resource type="Script" uid="uid://8nrws8bwiprl" path="res://scripts/fridge_door.gd" id="15_2a2la"]
[ext_resource type="ArrayMesh" uid="uid://bja6wsds8k0cf" path="res://assets/kitchenassets/fridge_A_decorated.obj" id="15_nwl14"]
[ext_resource type="ArrayMesh" uid="uid://bmnjpfam7mg7n" path="res://assets/kitchenassets/fridge_B_door.obj" id="16_2a2la"]
[ext_resource type="ArrayMesh" uid="uid://bnpcdwilyg6p8" path="res://assets/kitchenassets/table_round_A_small.obj" id="16_nwl14"]
[ext_resource type="ArrayMesh" uid="uid://s6dxpx2ietsv" path="res://assets/kitchenassets/crate.obj" id="19_6mti1"]
[ext_resource type="ArrayMesh" uid="uid://cxs3mxpafj2no" path="res://assets/kitchenassets/crate_lid.obj" id="20_gi6id"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f3sb7"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_fj7yv"]
sky_material = SubResource("ProceduralSkyMaterial_f3sb7")

[sub_resource type="Environment" id="Environment_tlwt5"]
background_mode = 2
sky = SubResource("Sky_fj7yv")
tonemap_mode = 2
fog_density = 0.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_fj7yv"]
radius = 0.49
height = 1.99

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tlwt5"]

[sub_resource type="BoxShape3D" id="BoxShape3D_b1m2q"]
size = Vector3(2, 1, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_bpfb4"]
size = Vector3(1, 0.705566, 0.72998)

[sub_resource type="BoxShape3D" id="BoxShape3D_gi6id"]
size = Vector3(1, 0.707733, 0.762451)

[sub_resource type="BoxShape3D" id="BoxShape3D_6mti1"]
size = Vector3(1, 0.452454, 1.48477)

[sub_resource type="BoxShape3D" id="BoxShape3D_deaom"]
size = Vector3(1, 0.641602, 0.836487)

[sub_resource type="BoxShape3D" id="BoxShape3D_2a2la"]
size = Vector3(1, 0.646027, 0.649841)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_aqk2v"]
height = 1.0
radius = 1.5

[sub_resource type="BoxShape3D" id="BoxShape3D_k3n1d"]
size = Vector3(4, 1, 2)

[sub_resource type="BoxShape3D" id="BoxShape3D_2o6r5"]
size = Vector3(2, 1, 4)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_6mti1"]
height = 0.992188
radius = 0.168945

[sub_resource type="CylinderShape3D" id="CylinderShape3D_deaom"]
height = 2.26318

[sub_resource type="BoxShape3D" id="BoxShape3D_wse8f"]
size = Vector3(1.49, 0.175, 0.99)

[sub_resource type="BoxShape3D" id="BoxShape3D_k40i2"]
size = Vector3(1.50104, 0.15033, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_sxw1y"]
height = 0.108154

[sub_resource type="CylinderShape3D" id="CylinderShape3D_nwl14"]
height = 0.999023
radius = 0.744629

[sub_resource type="CylinderShape3D" id="CylinderShape3D_2a2la"]
height = 0.705811

[sub_resource type="BoxShape3D" id="BoxShape3D_nwl14"]
size = Vector3(0.51, 2.5, 2.001)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_le6xu"]
bounce = 0.2

[sub_resource type="CylinderShape3D" id="CylinderShape3D_tlwt5"]
height = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_70uel"]
size = Vector3(0.255676, 0.102249, 1.14643)

[sub_resource type="BoxShape3D" id="BoxShape3D_le6xu"]
size = Vector3(0.265495, 0.112322, 0.796977)

[sub_resource type="BoxShape3D" id="BoxShape3D_8bx52"]
size = Vector3(1, 1, 1.12305)

[node name="world" type="Node3D"]
script = ExtResource("1_k40i2")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_tlwt5")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)

[node name="floor" type="CSGBox3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
use_collision = true
collision_layer = 3
size = Vector3(240, 0.195, 240)

[node name="player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 2.675)
script = ExtResource("2_le6xu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="player"]
shape = SubResource("CapsuleShape3D_fj7yv")

[node name="MeshInstance3D" type="MeshInstance3D" parent="player"]
mesh = SubResource("CapsuleMesh_tlwt5")

[node name="head" type="Node3D" parent="player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.645, 0)

[node name="player_camera" type="Camera3D" parent="player/head"]
current = true
fov = 90.0

[node name="seecast" type="RayCast3D" parent="player/head/player_camera"]
target_position = Vector3(0, 0, -3)

[node name="pickup_timer" type="Timer" parent="player"]

[node name="crates" type="Node3D" parent="."]

[node name="bun_crate" type="StaticBody3D" parent="crates" groups=["summoner"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="crates/bun_crate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("BoxShape3D_b1m2q")

[node name="CrateBuns" type="MeshInstance3D" parent="crates/bun_crate"]
mesh = ExtResource("12_8bx52")
skeleton = NodePath("../../..")

[node name="lettuce_crate" type="StaticBody3D" parent="crates" groups=["summoner"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="crates/lettuce_crate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.00238, 0.651303, 6.38137)
shape = SubResource("BoxShape3D_bpfb4")

[node name="carrot_crate" type="StaticBody3D" parent="crates" groups=["summoner"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="crates/carrot_crate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.03463, 0.650192, 5.63208)
shape = SubResource("BoxShape3D_gi6id")

[node name="meat_crate" type="StaticBody3D" parent="crates" groups=["summoner"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="crates/meat_crate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.9999, 1.22806, 6.00139)
shape = SubResource("BoxShape3D_6mti1")

[node name="cheese_crate" type="StaticBody3D" parent="crates" groups=["summoner"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.83549, 6.37025)

[node name="CollisionShape3D" type="CollisionShape3D" parent="crates/cheese_crate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.00557, 0.0854492, -0.0470276)
shape = SubResource("BoxShape3D_deaom")

[node name="tomato_crate" type="StaticBody3D" parent="crates" groups=["summoner"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 1.9, 5.6)

[node name="FridgeADecorated" type="MeshInstance3D" parent="crates/tomato_crate"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, -1.9, 0.4)
mesh = ExtResource("15_nwl14")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="crates/tomato_crate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0192719, -0.0162048)
shape = SubResource("BoxShape3D_2a2la")

[node name="table" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0, 1)
collision_layer = 3

[node name="TableRoundA" type="MeshInstance3D" parent="table"]
mesh = ExtResource("3_q76tg")
skeleton = NodePath("../../player/head/player_camera")

[node name="CollisionShape3D" type="CollisionShape3D" parent="table"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.498779, 0)
shape = SubResource("CylinderShape3D_aqk2v")

[node name="counter" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0)
collision_layer = 3

[node name="StoveSingle" type="MeshInstance3D" parent="counter"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 4)
mesh = ExtResource("4_sxw1y")
skeleton = NodePath("../..")

[node name="KitchencounterStraightB" type="MeshInstance3D" parent="counter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, 0)
mesh = ExtResource("6_2a2la")
skeleton = NodePath("../..")

[node name="KitchencounterInnercorner" type="MeshInstance3D" parent="counter"]
mesh = ExtResource("7_deaom")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="counter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0.5, 0)
shape = SubResource("BoxShape3D_k3n1d")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="counter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 3)
shape = SubResource("BoxShape3D_2o6r5")

[node name="KitchencounterStraightB2" type="MeshInstance3D" parent="counter"]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 0, 0, 2)
mesh = ExtResource("6_2a2la")
skeleton = NodePath("../..")

[node name="stove" type="Area3D" parent="counter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2, 4)

[node name="PanA" type="MeshInstance3D" parent="counter/stove"]
mesh = ExtResource("7_2a2la")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="counter/stove"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.503906, 0)
shape = SubResource("CylinderShape3D_6mti1")

[node name="CollisionShape3D3" type="CollisionShape3D" parent="counter"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.131592, 4)
shape = SubResource("CylinderShape3D_deaom")

[node name="chopping_board" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 1, 0)
collision_layer = 3

[node name="chopping_board" type="Area3D" parent="chopping_board"]

[node name="Cuttingboard" type="MeshInstance3D" parent="chopping_board/chopping_board"]
mesh = ExtResource("8_6mti1")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="chopping_board/chopping_board"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
shape = SubResource("BoxShape3D_wse8f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="chopping_board"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000579834, 0.077301, 0)
shape = SubResource("BoxShape3D_k40i2")

[node name="chopping_board2" type="StaticBody3D" parent="."]
transform = Transform3D(1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, 6, 1, 2)
collision_layer = 3

[node name="chopping_board" type="Area3D" parent="chopping_board2"]

[node name="Cuttingboard" type="MeshInstance3D" parent="chopping_board2/chopping_board"]
mesh = ExtResource("8_6mti1")
skeleton = NodePath("../../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="chopping_board2/chopping_board"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.08, 0)
shape = SubResource("BoxShape3D_wse8f")

[node name="CollisionShape3D" type="CollisionShape3D" parent="chopping_board2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000579834, 0.077301, 0)
shape = SubResource("BoxShape3D_k40i2")

[node name="objective_plate" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1, 6)
script = ExtResource("14_sxw1y")

[node name="Plate" type="MeshInstance3D" parent="objective_plate" groups=["keep"]]
mesh = ExtResource("14_q76tg")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="objective_plate" groups=["keep"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0450439, 0)
shape = SubResource("CylinderShape3D_sxw1y")

[node name="TableRoundASmall" type="MeshInstance3D" parent="objective_plate" groups=["keep"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = ExtResource("16_nwl14")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="objective_plate" groups=["keep"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.500488, 0)
shape = SubResource("CylinderShape3D_nwl14")

[node name="delivery_plate" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1, 4)

[node name="TableRoundASmall" type="MeshInstance3D" parent="delivery_plate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
mesh = ExtResource("16_nwl14")
skeleton = NodePath("../..")

[node name="Plate" type="MeshInstance3D" parent="delivery_plate"]
mesh = ExtResource("14_q76tg")
skeleton = NodePath("../..")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="delivery_plate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.500488, 0)
shape = SubResource("CylinderShape3D_nwl14")

[node name="CollisionShape3D" type="CollisionShape3D" parent="delivery_plate"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.045, 0)
shape = SubResource("CylinderShape3D_sxw1y")

[node name="Area3D" type="Area3D" parent="delivery_plate"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="delivery_plate/Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.326782, 0)
shape = SubResource("CylinderShape3D_2a2la")

[node name="fridge_door" type="StaticBody3D" parent="." groups=["door"]]
transform = Transform3D(0.642788, 0, 0.766044, 0, 1, 0, -0.766044, 0, 0.642788, 5.57167, 0, 7.00747)
script = ExtResource("15_2a2la")

[node name="CollisionShape3D" type="CollisionShape3D" parent="fridge_door"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -1.00611, 1.25239, 0.320662)
shape = SubResource("BoxShape3D_nwl14")

[node name="FridgeBDoor" type="MeshInstance3D" parent="fridge_door"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -0.5)
mesh = ExtResource("16_2a2la")
skeleton = NodePath("../..")

[node name="bowl" type="RigidBody3D" parent="." groups=["pickupable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 1, 1)
mass = 0.8
physics_material_override = SubResource("PhysicsMaterial_le6xu")

[node name="bowl" type="MeshInstance3D" parent="bowl"]
mesh = ExtResource("9_gi6id")
skeleton = NodePath("../../player/head/player_camera")

[node name="CollisionShape3D" type="CollisionShape3D" parent="bowl" groups=["hitbox"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.151726, 0)
shape = SubResource("CylinderShape3D_tlwt5")

[node name="knife" type="RigidBody3D" parent="." groups=["knife", "pickupable"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.2, 1.1, 0.4)
mass = 0.6

[node name="Knife" type="MeshInstance3D" parent="knife"]
transform = Transform3D(1, 0, 0, 0, 1.19249e-08, 1, 0, -1, 1.19249e-08, 0, 0, 0)
mesh = ExtResource("10_bpfb4")
skeleton = NodePath("../..")

[node name="CollisionShape3D" type="CollisionShape3D" parent="knife" groups=["hitbox"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.075, 0, -0.365)
shape = SubResource("BoxShape3D_70uel")

[node name="cut_area" type="Area3D" parent="knife"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="knife/cut_area"]
transform = Transform3D(1, 0, -1.59578e-37, 0, 1, 0, 0, 0, 1, -0.0749478, 0, -0.54)
shape = SubResource("BoxShape3D_le6xu")

[node name="ui" type="CanvasLayer" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="ui"]
position = Vector2(960, 540)
scale = Vector2(0.2, 0.2)
texture = ExtResource("11_b1m2q")
offset = Vector2(43, 134)

[node name="Label" type="Label" parent="ui"]
offset_right = 485.0
offset_bottom = 43.0
scale = Vector2(3, 3)
text = "Money: 0"

[node name="bin" type="StaticBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 9.33828)

[node name="Crate" type="MeshInstance3D" parent="bin"]
mesh = ExtResource("19_6mti1")
skeleton = NodePath("../..")

[node name="CollisionPolygon3D" type="CollisionPolygon3D" parent="bin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0)
depth = 2.0
polygon = PackedVector2Array(0, 0.8, 0, 0, 0, 0, 2, 0, 2, 0.8, 1.95, 0.8, 1.95, 0.05, 0.05, 0.05, 0.05, 0.8)

[node name="CollisionPolygon3D2" type="CollisionPolygon3D" parent="bin"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.030442, 0, 1.00388)
depth = 2.0
polygon = PackedVector2Array(0, 0.8, 0, 0, 0, 0, 2, 0, 2, 0.8, 1.95, 0.8, 1.95, 0.05, 0.05, 0.05, 0.05, 0.8)

[node name="CrateLid" type="MeshInstance3D" parent="bin"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.808114, 0)
mesh = ExtResource("20_gi6id")

[node name="incinerator" type="Area3D" parent="bin"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="bin/incinerator"]
shape = SubResource("BoxShape3D_8bx52")

[connection signal="correct_order" from="." to="." method="_on_correct_order"]
[connection signal="correct_order" from="." to="objective_plate" method="_on_world_correct_order"]
[connection signal="money_change" from="player" to="." method="_on_player_money_change"]
[connection signal="timeout" from="player/pickup_timer" to="player" method="_on_pickup_timer_timeout"]
[connection signal="body_entered" from="counter/stove" to="." method="_on_stove_body_entered"]
[connection signal="body_exited" from="counter/stove" to="." method="_on_stove_body_exited"]
[connection signal="body_entered" from="chopping_board/chopping_board" to="." method="_on_chopping_board_body_entered"]
[connection signal="body_exited" from="chopping_board/chopping_board" to="." method="_on_chopping_board_body_exited"]
[connection signal="body_entered" from="chopping_board2/chopping_board" to="." method="_on_chopping_board_body_entered"]
[connection signal="objective" from="objective_plate" to="." method="_on_objective_plate_objective"]
[connection signal="body_entered" from="delivery_plate/Area3D" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="knife/cut_area" to="." method="_on_cut_area_body_entered"]
[connection signal="body_entered" from="bin/incinerator" to="." method="_on_incinerator_body_entered"]
